--- a/package.json
+++ b/package.json
@@ -4,12 +4,19 @@
   "description": "AWS lambda for verifying Cognito idenitities",
   "main": "index.js",
   "scripts": {
-    "test": "echo -n 'Write some tests'"
+    "test": "jest"
   },
   "keywords": [
     "aws",
     "lambda"
   ],
   "author": "Espinola Designs",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "http": "0.0.0",
+    "node-jose": "^1.0.0"
+  },
+  "devDependencies": {
+    "jest": "^23.5.0"
+  }
 }
